implement amor-cursor

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Einfach bloss nichts vergessen</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -407,7 +408,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Wie soll ich mich bei Gewitter verhalten?</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -419,7 +421,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">7 Life Hacks für den Festivalbesuch</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -431,7 +434,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Erste Hilfe und die Reiseapotheke</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -443,7 +447,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Tipps zum Bier kaltstellen</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -455,7 +460,8 @@
                         <div class="magazineSection__upper">
                             <h2 class="magazineSection__Title">Wo stelle ich mein Zelt auf?</h2>
                             <button class="magazineSection__btn magazineSection__btn--read btnTabsHeader">LESEN</button>
-                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN</button>
+                            <button class="magazineSection__btn magazineSection__btn--close btnTabsHeader">ZUKLAPPEN
+                            </button>
                         </div>
                         <p class="magazineSection__lower">
                             Zelt, Schlafsack, Isomatte vergessen: 3 Tage wach! Regenjacke, Mütze,
@@ -490,31 +496,35 @@
                     die Samples an und entdecke deine Leidenschaft</p>
                 <div class="discoverySection__imgContainer">
                     <div class="discoverySection__imgBox discoverySection__imgBox--jazz">
-                            <button class="discoverySection__musicBtn "></button>
-                            <audio class="sound" src="https://www.soundjay.com/button/beep-09.mp3"></audio>
+                        <button class="discoverySection__musicBtn "></button>
+                        <audio class="sound" src="https://www.soundjay.com/button/beep-09.mp3"></audio>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--hiphop">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/midnight-ride-01a.mp3"></audio>
+                            <audio class="sound"
+                                   src="https://www.soundjay.com/free-music/sounds/midnight-ride-01a.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--indie">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/jungle-run-01.mp3"></audio>
+                            <audio class="sound"
+                                   src="https://www.soundjay.com/free-music/sounds/jungle-run-01.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--poprock">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <audio class="sound" src="https://www.soundjay.com/free-music/sounds/heart-of-the-sea-01.mp3"></audio>
+                            <audio class="sound"
+                                   src="https://www.soundjay.com/free-music/sounds/heart-of-the-sea-01.mp3"></audio>
                         </div>
                     </div>
                     <div class="discoverySection__imgBox discoverySection__imgBox--electronic">
                         <div class="discoverySection__contBox">
                             <button class="discoverySection__musicBtn "></button>
-                            <audio class="sound" src="https://www.soundjay.com/ambient/sounds/spring-weather-1.mp3"></audio>
+                            <audio class="sound"
+                                   src="https://www.soundjay.com/ambient/sounds/spring-weather-1.mp3"></audio>
                         </div>
                     </div>
                 </div>
@@ -538,19 +548,7 @@
                                 announce next week #festival
                             </div>
                             <div class="newsSection__like">
-                                <svg class="newsSection__heart" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                    <title>detail_like_filled</title>
-                                    <desc>Created with Sketch.</desc>
-                                    <defs></defs>
-                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                        <g id="detail_like_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
-                                            <g transform="translate(12.000000, 12.000000)" id="Shape">
-                                                <path d="M23.9589231,7.03476923 C23.6086154,3.17907692 20.8795385,0.381692308 17.4641538,0.381692308 C15.1887692,0.381692308 13.1053846,1.60615385 11.9330769,3.56861538 C10.7713846,1.58076923 8.77338462,0.381230769 6.53446154,0.381230769 C3.11953846,0.381230769 0.39,3.17861538 0.0401538462,7.03430769 C0.0124615385,7.20461538 -0.101076923,8.10092308 0.244153846,9.56261538 C0.741692308,11.6709231 1.89092308,13.5886154 3.56676923,15.1070769 L11.9275385,22.6943077 L20.4318462,15.1075385 C22.1076923,13.5886154 23.2569231,11.6713846 23.7544615,9.56261538 C24.0996923,8.10138462 23.9861538,7.20507692 23.9589231,7.03476923 L23.9589231,7.03476923 Z"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </svg>
+                                <div class="newsSection__heart"></div>
                                 <span class="newsSection__qty">0</span>
                             </div>
                         </div>
@@ -567,19 +565,7 @@
                                 announce next week #festival
                             </div>
                             <div class="newsSection__like">
-                                <svg class="newsSection__heart" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                    <title>detail_like_filled</title>
-                                    <desc>Created with Sketch.</desc>
-                                    <defs></defs>
-                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                        <g id="detail_like_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
-                                            <g transform="translate(12.000000, 12.000000)" id="Shape">
-                                                <path d="M23.9589231,7.03476923 C23.6086154,3.17907692 20.8795385,0.381692308 17.4641538,0.381692308 C15.1887692,0.381692308 13.1053846,1.60615385 11.9330769,3.56861538 C10.7713846,1.58076923 8.77338462,0.381230769 6.53446154,0.381230769 C3.11953846,0.381230769 0.39,3.17861538 0.0401538462,7.03430769 C0.0124615385,7.20461538 -0.101076923,8.10092308 0.244153846,9.56261538 C0.741692308,11.6709231 1.89092308,13.5886154 3.56676923,15.1070769 L11.9275385,22.6943077 L20.4318462,15.1075385 C22.1076923,13.5886154 23.2569231,11.6713846 23.7544615,9.56261538 C24.0996923,8.10138462 23.9861538,7.20507692 23.9589231,7.03476923 L23.9589231,7.03476923 Z"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </svg>
+                                <div class="newsSection__heart"></div>
                                 <span class="newsSection__qty">0</span>
                             </div>
                         </div>
@@ -595,19 +581,7 @@
                                 announce next week #festival
                             </div>
                             <div class="newsSection__like">
-                                <svg class="newsSection__heart" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                    <title>detail_like_filled</title>
-                                    <desc>Created with Sketch.</desc>
-                                    <defs></defs>
-                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                        <g id="detail_like_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
-                                            <g transform="translate(12.000000, 12.000000)" id="Shape">
-                                                <path d="M23.9589231,7.03476923 C23.6086154,3.17907692 20.8795385,0.381692308 17.4641538,0.381692308 C15.1887692,0.381692308 13.1053846,1.60615385 11.9330769,3.56861538 C10.7713846,1.58076923 8.77338462,0.381230769 6.53446154,0.381230769 C3.11953846,0.381230769 0.39,3.17861538 0.0401538462,7.03430769 C0.0124615385,7.20461538 -0.101076923,8.10092308 0.244153846,9.56261538 C0.741692308,11.6709231 1.89092308,13.5886154 3.56676923,15.1070769 L11.9275385,22.6943077 L20.4318462,15.1075385 C22.1076923,13.5886154 23.2569231,11.6713846 23.7544615,9.56261538 C24.0996923,8.10138462 23.9861538,7.20507692 23.9589231,7.03476923 L23.9589231,7.03476923 Z"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </svg>
+                                <div class="newsSection__heart"></div>
                                 <span class="newsSection__qty">0</span>
                             </div>
                         </div>
@@ -623,19 +597,7 @@
                                 announce next week #festival
                             </div>
                             <div class="newsSection__like">
-                                <svg class="newsSection__heart" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                    <title>detail_like_filled</title>
-                                    <desc>Created with Sketch.</desc>
-                                    <defs></defs>
-                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                        <g id="detail_like_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
-                                            <g transform="translate(12.000000, 12.000000)" id="Shape">
-                                                <path d="M23.9589231,7.03476923 C23.6086154,3.17907692 20.8795385,0.381692308 17.4641538,0.381692308 C15.1887692,0.381692308 13.1053846,1.60615385 11.9330769,3.56861538 C10.7713846,1.58076923 8.77338462,0.381230769 6.53446154,0.381230769 C3.11953846,0.381230769 0.39,3.17861538 0.0401538462,7.03430769 C0.0124615385,7.20461538 -0.101076923,8.10092308 0.244153846,9.56261538 C0.741692308,11.6709231 1.89092308,13.5886154 3.56676923,15.1070769 L11.9275385,22.6943077 L20.4318462,15.1075385 C22.1076923,13.5886154 23.2569231,11.6713846 23.7544615,9.56261538 C24.0996923,8.10138462 23.9861538,7.20507692 23.9589231,7.03476923 L23.9589231,7.03476923 Z"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </svg>
+                                <div class="newsSection__heart"></div>
                                 <span class="newsSection__qty">0</span>
                             </div>
                         </div>
@@ -651,20 +613,8 @@
                                 announce next week #festival
                             </div>
                             <div class="newsSection__like">
-                                <svg class="newsSection__heart" width="24px" height="23px" viewBox="0 0 24 23" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
-                                    <title>detail_like_filled</title>
-                                    <desc>Created with Sketch.</desc>
-                                    <defs></defs>
-                                    <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                                        <g class="detail_like_filled" id="detail_like_filled" transform="translate(-12.000000, -12.000000)" fill="#000000">
-                                            <g transform="translate(12.000000, 12.000000)" id="Shape">
-                                                <path d="M23.9589231,7.03476923 C23.6086154,3.17907692 20.8795385,0.381692308 17.4641538,0.381692308 C15.1887692,0.381692308 13.1053846,1.60615385 11.9330769,3.56861538 C10.7713846,1.58076923 8.77338462,0.381230769 6.53446154,0.381230769 C3.11953846,0.381230769 0.39,3.17861538 0.0401538462,7.03430769 C0.0124615385,7.20461538 -0.101076923,8.10092308 0.244153846,9.56261538 C0.741692308,11.6709231 1.89092308,13.5886154 3.56676923,15.1070769 L11.9275385,22.6943077 L20.4318462,15.1075385 C22.1076923,13.5886154 23.2569231,11.6713846 23.7544615,9.56261538 C24.0996923,8.10138462 23.9861538,7.20507692 23.9589231,7.03476923 L23.9589231,7.03476923 Z"></path>
-                                            </g>
-                                        </g>
-                                    </g>
-                                </svg>
-                                <span class="newsSection__qty">0</span>
+                                <div class="newsSection__heart"></div>
+                                <span class="newsSection__qty"><strong>0</strong></span>
                             </div>
                         </div>
 
