--- a/src/index.html
+++ b/src/index.html
@@ -614,7 +614,7 @@
                             </div>
                             <div class="newsSection__like">
                                 <div class="newsSection__heart"></div>
-                                <span class="newsSection__qty"><strong>0</strong></span>
+                                <span class="newsSection__qty">0</span>
                             </div>
                         </div>
 
