--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -299,8 +299,14 @@
                             </g>
                         </g>
                     </svg>
-                    <a href="overview-festivals.html"><div class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</div></a>
+
+                    <ul class="overviewSection__festivaldrope">
+                        <li class="overviewSection__dropitem overviewSection__dropitem--show"><a href="overview-festivals.html"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</span></a></li>
+                        <li class="overviewSection__dropitem overviewSection__dropitem--hide"><a href="index.html#magazineSection"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">Magazine</span></a></li>
+                        <li class="overviewSection__dropitem overviewSection__dropitem--hide"><a href="index.html#newsSection"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">News</span></a></li>
+                    </ul>
                     <div class="overviewSection__dropdownContainer">
+
                         <svg class="overviewSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -318,6 +324,7 @@
                                 </g>
                             </g>
                         </svg>
+
                     </div>
                 </div>
                 <h1 class="titleSection__h1">Alles für deinen Musikgeschmack</h1>
