breadcrumb in progress

--- a/src/overview-festivals.html
+++ b/src/overview-festivals.html
@@ -301,12 +301,11 @@
                     </svg>
 
                     <ul class="overviewSection__festivaldrope">
-                        <li class="overviewSection__dropitem overviewSection__dropitem--show"><a href="overview-festivals.html"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</span></a></li>
+                        <li class="overviewSection__dropitem"><a href="overview-festivals.html"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">Festivals</span></a></li>
                         <li class="overviewSection__dropitem overviewSection__dropitem--hide"><a href="index.html#magazineSection"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">Magazine</span></a></li>
                         <li class="overviewSection__dropitem overviewSection__dropitem--hide"><a href="index.html#newsSection"><span class="overviewSection__festivals breadcrumbInfosDatesLikes">News</span></a></li>
                     </ul>
                     <div class="overviewSection__dropdownContainer">
-
                         <svg class="overviewSection__dropdown" width="17px" height="10px" viewBox="0 0 17 10" version="1.1"
                              xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
@@ -324,8 +323,8 @@
                                 </g>
                             </g>
                         </svg>
-
                     </div>
+
                 </div>
                 <h1 class="titleSection__h1">Alles für deinen Musikgeschmack</h1>
                 <h3 class="titleSection__h3">Unsere FestivalLovers verdienen nur das Beste. Wir bringen euch alle
